# Zetra-backend-

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  fly.toml  routes.rs
.github/workflows/: rust.yml
migrations/: 002_zetra_id.sql  003_messages.sql  004_verification.sql  20240520000001_zetra_id.sql  20260712000001_init.sql
src/: config.rs  db.rs  error.rs  main.rs  models.rs  routes.rs  state.rs
src/auth/: jwt.rs  middleware.rs  password.rs
src/handlers/: auth.rs  comments.rs  identity.rs  media.rs  messages.rs  mod.rs  users.rs
src/storage/: handler.rs  service.rs
